Bug 1723214: If BorrowDrawTarget fails in GetTextureClient just return the current front buffer. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D122261